--- a/src/assets/styles/components/buttons.scss
+++ b/src/assets/styles/components/buttons.scss
@@ -1,4 +1,4 @@
-.button-gxb{
+.button-idac{
   font-size: .75rem;
   color:$THEME_BUTTON_TEXT_COLOR;
   border-color:$THEME_BUTTON_BG_COLOR;
@@ -25,7 +25,7 @@
   }
 }
 
-.button-gxb-secondary{
+.button-idac-secondary{
   font-size: .75rem;
   color:$THEME_BUTTON_TEXT_COLOR;
   border-color:$THEME_BUTTON_SECONDARY_BG_COLOR;
