--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -6,12 +6,12 @@ $THEME_TITLE_COLOR:#fff;
 $THEME_BAR_BG_COLOR: #3d3d3b;
 //tint color
 $THEME_TINT_COLOR: #3d3d3b;
-//gxb button text color
+//IDAC button text color
 $THEME_BUTTON_TEXT_COLOR: #fff;
-//gxb button bg color
+//IDAC button bg color
 $THEME_BUTTON_BG_COLOR: #4f5b62;
-//gxb button bg color
+//IDAC button bg color
 $THEME_BUTTON_SECONDARY_BG_COLOR: #62757f;
-//gxb colors
+//IDAC colors
 $THEME_COLOR_PRIMARY:#546e7a;
 $THEME_COLOR_DANGER:#ed3f14;
